fix:overflow issue

--- a/style.css
+++ b/style.css
@@ -2,14 +2,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* overflow: auto; */
 }
 body {
   width: 95vw;
   height: 95vh;
+
 }
 .cell {
   height: 25px;
   border: 1px solid #ccc;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .cell[contenteditable="true"] {
